--- a/pages/contact.css
+++ b/pages/contact.css
@@ -1,294 +1,295 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-.contact-info {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.contact-container {
-  width: 100%;
-  max-width: 100%; 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.contact-title {
-  text-align: center;
-  margin-bottom: 30px;
-  width: 100%;
-}
-
-.contact-title h1 {
-  font-size: 1.5rem; 
-  color: #333; 
-}
-
-.contact-items {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 30px; 
-  width: 100%;
-}
-
-.contact-map {
-  flex: 1;
-  min-width: 300px; 
-  display: flex;
-  justify-content: center;
-}
-
-.contact-map iframe {
-  max-width: 100%;
-  height: auto;
-  aspect-ratio: 4/3; 
-}
-
-.contact-info-add {
-  flex: 1;
-  min-width: 300px; 
-  text-align: center;
-}
-
-.contact-info-add h2 {
-  margin-bottom: 20px;
-  font-size: 1.2rem;
-  color: #333; 
-}
-
-.contact-info-add p{
-  font-size: 1.1rem;
-}
-
-.contact-info-add ul {
-  list-style: none;
-}
-
-.contact-info-add li {
-  margin-bottom: 10px;
-}
-
-@media (max-width: 768px) {
-  .contact-items {
-    flex-direction: column;
-    align-items: center;
+  margin:0;
+  padding:0;
+  box-sizing:border-box
   }
   
-  .contact-map, .contact-info-add {
-    width: 100%;
+  .contact-info {
+  width:100%;
+  display:flex;
+  justify-content:center;
+  align-items:center
+  }
+  
+  .contact-container {
+  width:100%;
+  max-width:100%;
+  display:flex;
+  flex-direction:column;
+  align-items:center
+  }
+  
+  .contact-title {
+  text-align:center;
+  margin-bottom:30px;
+  width:100%
   }
   
   .contact-title h1 {
-    font-size: 1.5rem;
-  }
-}
-
-button {
-  overflow: visible;
-}
-
-button, select {
-  text-transform: none;
-}
-
-button, input, select, textarea {
-  color: #5A5A5A;
-  font: inherit;
-  margin: 0;
-}
-
-input {
-  line-height: normal;
-}
-
-textarea {
-  overflow: auto;
-}
-
-#container {
-  border: solid 3px #474544;
-  max-width: 768px;
-  margin: 60px auto;
-  position: relative;
-}
-
-form {
-  padding: 37.5px;
-  margin: 50px 0;
-}
-
-h1 {
-  color: #474544;
-  font-size: 32px;
-  font-weight: 700;
-  letter-spacing: 7px;
-  text-align: center;
-  text-transform: uppercase;
-}
-
-.email {
-	float: right;
-	width: 45%;
-}
-
-input[type='text'], [type='email'], select, textarea {
-	background: none;
-  border: none;
-	border-bottom: solid 2px #474544;
-	color: #474544;
-	font-size: 1.000em;
-  font-weight: 400;
-  letter-spacing: 1px;
-	margin: 0em 0 1.875em 0;
-	padding: 0 0 0.875em 0;
-  text-transform: uppercase;
-	width: 100%;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-ms-box-sizing: border-box;
-	-o-box-sizing: border-box;
-	box-sizing: border-box;
-	-webkit-transition: all 0.3s;
-	-moz-transition: all 0.3s;
-	-ms-transition: all 0.3s;
-	-o-transition: all 0.3s;
-	transition: all 0.3s;
-}
-
-input[type='text']:focus, [type='email']:focus, textarea:focus {
-	outline: none;
-	padding: 0 0 0.875em 0;
-}
-
-.message {
-	float: none;
-}
-
-.name {
-	float: left;
-	width: 45%;
-}
-
-select {
-  background: url('https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-arrow-down-32.png') no-repeat right;
-  outline: none;
-  appearance: none;
-  -moz-appearance: none;
-  -webkit-appearance: none;
-}
-
-select::-ms-expand {
-  display: none;
-}
-
-.subject {
-  width: 100%;
-}
-
-.telephone {
-  width: 100%;
-}
-
-::-webkit-input-placeholder {
-	color: #474544;
-}
-
-:-moz-placeholder { 
-	color: #474544;
-	opacity: 1;
-}
-
-::-moz-placeholder {
-	color: #474544;
-	opacity: 1;
-}
-
-:-ms-input-placeholder {
-	color: #474544;
-}
-
-#form_button {
-  background: none;
-  border: solid 2px #474544;
-  color: #474544;
-  cursor: pointer;
-  display: inline-block;
-  font-family: 'Helvetica', Arial, sans-serif;
-  font-size: 0.875em;
-  font-weight: bold;
-  outline: none;
-  padding: 20px 35px;
-  text-transform: uppercase;
-  -webkit-transition: all 0.3s;
-	-moz-transition: all 0.3s;
-	-ms-transition: all 0.3s;
-	-o-transition: all 0.3s;
-	transition: all 0.3s;
-}
-
-#form_button:hover {
-  background: #474544;
-  color: #F2F3EB;
-}
-
-@keyframes pageEntrance {
-	from {
-		transform: translateX(-100%);
-		opacity: 0;
-	}
-	to {
-		transform: translateX(0);
-		opacity: 1;
-	}
-}
-
-body {
-	animation: pageEntrance 1s ease-in-out;
-}
-
-@media screen and (max-width: 768px) {
-  #container {
-    margin: 20px auto;
-    width: 95%;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  h1 {
-    font-size: 26px;
+  font-size:1.5rem;
+  color:#333
   }
   
-  .underline {
-    width: 68px;
+  .contact-items {
+  display:flex;
+  flex-wrap:wrap;
+  justify-content:center;
+  gap:30px;
+  width:100%
+  }
+  
+  .contact-map {
+  flex:1;
+  min-width:300px;
+  display:flex;
+  justify-content:center
+  }
+  
+  .contact-map iframe {
+  max-width:100%;
+  height:auto;
+  aspect-ratio:4/3
+  }
+  
+  .contact-info-add {
+  flex:1;
+  min-width:300px;
+  text-align:center
+  }
+  
+  .contact-info-add h2 {
+  margin-bottom:20px;
+  font-size:1.2rem;
+  color:#333
+  }
+  
+  .contact-info-add p {
+  font-size:1.1rem
+  }
+  
+  .contact-info-add ul {
+  list-style:none
+  }
+  
+  .contact-info-add li {
+  margin-bottom:10px
+  }
+  
+  @media (max-width: 768px) {
+  .contact-items {
+  flex-direction:column;
+  align-items:center
+  }
+  
+  .contact-map,.contact-info-add {
+  width:100%
+  }
+  
+  .contact-title h1 {
+  font-size:1.5rem
+  }
+  }
+  
+  button {
+  overflow:visible
+  }
+  
+  button,select {
+  text-transform:none
+  }
+  
+  button,input,select,textarea {
+  color:#5A5A5A;
+  font:inherit;
+  margin:0
+  }
+  
+  input {
+  line-height:normal
+  }
+  
+  textarea {
+  overflow:auto
+  }
+  
+  #container {
+  border:solid 3px #474544;
+  max-width:768px;
+  margin:60px auto;
+  position:relative
+  }
+  
+  form {
+  padding:37.5px;
+  margin:50px 0
+  }
+  
+  h1 {
+  color:#474544;
+  font-size:32px;
+  font-weight:700;
+  letter-spacing:7px;
+  text-align:center;
+  text-transform:uppercase
+  }
+  
+  .email {
+  float:right;
+  width:45%
+  }
+  
+  input[type='text'],[type='email'],select,textarea {
+  background:none;
+  border:none;
+  border-bottom:solid 2px #474544;
+  color:#474544;
+  font-size:1em;
+  font-weight:400;
+  letter-spacing:1px;
+  margin:0 0 1.875em;
+  padding:0 0 .875em;
+  text-transform:uppercase;
+  width:100%;
+  -webkit-box-sizing:border-box;
+  -moz-box-sizing:border-box;
+  -ms-box-sizing:border-box;
+  -o-box-sizing:border-box;
+  box-sizing:border-box;
+  -webkit-transition:all .3s;
+  -moz-transition:all .3s;
+  -ms-transition:all .3s;
+  -o-transition:all .3s;
+  transition:all .3s
+  }
+  
+  input[type='text']:focus,[type='email']:focus,textarea:focus {
+  outline:none;
+  padding:0 0 .875em
+  }
+  
+  .message {
+  float:none
+  }
+  
+  .name {
+  float:left;
+  width:45%
+  }
+  
+  select {
+  background:url(https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-arrow-down-32.png) no-repeat right;
+  outline:none;
+  appearance:none;
+  -moz-appearance:none;
+  -webkit-appearance:none
+  }
+  
+  select::-ms-expand {
+  display:none
+  }
+  
+  .subject {
+  width:100%
+  }
+  
+  .telephone {
+  width:100%
+  }
+  
+  ::-webkit-input-placeholder {
+  color:#474544
+  }
+  
+  :-moz-placeholder {
+  color:#474544;
+  opacity:1
+  }
+  
+  ::-moz-placeholder {
+  color:#474544;
+  opacity:1
+  }
+  
+  :-ms-input-placeholder {
+  color:#474544
   }
   
   #form_button {
-    padding: 15px 25px;
-  }
-}
-
-@media screen and (max-width: 420px) {
-  h1 {
-    font-size: 18px;
+  background:none;
+  border:solid 2px #474544;
+  color:#474544;
+  cursor:pointer;
+  display:inline-block;
+  font-family:'Helvetica',Arial,sans-serif;
+  font-size:.875em;
+  font-weight:700;
+  outline:none;
+  padding:20px 35px;
+  text-transform:uppercase;
+  -webkit-transition:all .3s;
+  -moz-transition:all .3s;
+  -ms-transition:all .3s;
+  -o-transition:all .3s;
+  transition:all .3s
   }
   
-  .icon {
-    height: 35px;
-    width: 35px;
+  #form_button:hover {
+  background:#474544;
+  color:#F2F3EB
+  }
+  
+  @keyframes pageEntrance {
+  from {
+  transform:translateX(-100%);
+  opacity:0
+  }
+  
+  to {
+  transform:translateX(0);
+  opacity:1
+  }
+  }
+  
+  body {
+  animation:pageEntrance 1s ease-in-out
+  }
+  
+  @media screen and (max-width: 768px) {
+  #container {
+  margin:20px auto;
+  width:95%
+  }
+  }
+  
+  @media screen and (max-width: 480px) {
+  h1 {
+  font-size:26px
   }
   
   .underline {
-    width: 53px;
+  width:68px
   }
   
-  input[type='text'], [type='email'], select, textarea {
-    font-size: 0.875em;
+  #form_button {
+  padding:15px 25px
   }
-}
+  }
+  
+  @media screen and (max-width: 420px) {
+  h1 {
+  font-size:18px
+  }
+  
+  .icon {
+  height:35px;
+  width:35px
+  }
+  
+  .underline {
+  width:53px
+  }
+  
+  input[type='text'],[type='email'],select,textarea {
+  font-size:.875em
+  }
+  }
