--- a/pages/fonts.css
+++ b/pages/fonts.css
@@ -1,99 +1,95 @@
 .abel-regular {
-    font-family: "Abel", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-}
-
-.inter-regular {
-    font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-}
-
-/* mobile-first */
-h1, .h1 {
-    font-family: "Inter", sans-serif;
-    font-size: 2rem;
-    letter-spacing: 3px;
-    line-height: 1.4;
-}
-
-h2 {
-    font-family: "Inter", sans-serif;
-    font-size: 1.8rem;
-}
-
-h3 {
-    font-family: "Inter", sans-serif;
-    font-size:1.6rem;
-}
-
-h4 {
-    font-family: "Abel", sans-serif;
+    font-family:"Abel",sans-serif;
+    font-weight:400;
+    font-style:normal
+    }
+    
+    .inter-regular {
+    font-family:"Inter",sans-serif;
+    font-optical-sizing:auto;
+    font-weight:400;
+    font-style:normal
+    }
+    
+    h1,.h1 {
+    font-family:"Inter",sans-serif;
+    font-size:2rem;
+    letter-spacing:3px;
+    line-height:1.4
+    }
+    
+    h2 {
+    font-family:"Inter",sans-serif;
+    font-size:1.8rem
+    }
+    
+    h3 {
+    font-family:"Inter",sans-serif;
+    font-size:1.6rem
+    }
+    
+    h4 {
+    font-family:"Abel",sans-serif;
     font-size:1.2rem;
-    letter-spacing: 0.2rem;
-}
-
-p, .p {
-    font-family: "Abel", sans-serif;
-    font-size: 1.4rem;
-    line-height: 1.5;
-}
-
-/* tablet styles fonts */
-@media screen and (max-width: 601px) {
-    h1, .h1 {
-        font-size: 1rem;
+    letter-spacing:.2rem
     }
-
+    
+    p,.p {
+    font-family:"Abel",sans-serif;
+    font-size:1.4rem;
+    line-height:1.5
+    }
+    
+    @media screen and (max-width: 601px) {
+    h1,.h1 {
+    font-size:1rem
+    }
+    
     h2 {
-        font-size: 0.8rem;
+    font-size:.8rem
     }
-
+    
     h3 {
-        font-size: 0.6rem;
+    font-size:.6rem
     }
-
+    
     p {
-        font-size: 1.4rem;
+    font-size:1.4rem
     }
-}
-
-/* laptop/desktop styles fonts */
-@media screen and (max-width: 1025px) {
-    h1, .h1 {
-        font-size: 1.5rem;
     }
-
+    
+    @media screen and (max-width: 1025px) {
+    h1,.h1 {
+    font-size:1.5rem
+    }
+    
     h2 {
-        font-size: 2.5rem;
+    font-size:2.5rem
     }
-
+    
     h3 {
-        font-size: 2rem;
+    font-size:2rem
     }
-
+    
     p {
-        font-size: 1.4rem;
+    font-size:1.4rem
     }
-}
-
-@media screen and (max-width: 1200px) {
-    h1, .h1 {
-        font-size: 1.5rem;
     }
-
+    
+    @media screen and (max-width: 1200px) {
+    h1,.h1 {
+    font-size:1.5rem
+    }
+    
     h2 {
-        font-size: 1.2rem;
+    font-size:1.2rem
     }
-
+    
     h3 {
-        font-size: 1.1rem;
+    font-size:1.1rem
     }
-
+    
     p {
-        font-size: 1.2rem;
+    font-size:1.2rem
     }
-}
-
+    }
