--- a/style.css
+++ b/style.css
@@ -273,7 +273,7 @@ body {
   padding:3rem;
   gap:2rem;
   background-color:#fff;
-  min-height:80vh;
+  min-height:90vh;
   height:auto
   }
   
@@ -284,10 +284,11 @@ body {
   position:relative;
   width:95%;
   min-height:95%;
+  max-height: 98%;
   background:url(/components/photos/tallow-shop.webp) no-repeat center center/cover;
   color:#fff;
   text-align:center;
-  padding:20px
+  padding:4%;
   }
   
   .overlay {
@@ -296,7 +297,7 @@ body {
   left:0;
   width:100%;
   height:100%;
-  background:#0009
+  background:rgba(0, 0, 0, 0.945)
   }
   
   .content {
