--- a/pages/buttons.css
+++ b/pages/buttons.css
@@ -87,6 +87,7 @@
     cursor: pointer;
     background-color: #5E3322;
     transition: all 1s ease;
+    min-width: 24px;
   }
   
   .button-two:active {
@@ -103,6 +104,7 @@
     transform: translateX(-50%);
     z-index: -1000;
     background-repeat: no-repeat;
+    
   }
   
   .button-two:hover:before {
