--- a/pages/fonts.css
+++ b/pages/fonts.css
@@ -19,8 +19,8 @@
     }
     
     h2 {
-    font-family:"Inter",sans-serif;
-    font-size:1.8rem
+    font-family:"Abel",sans-serif;
+    font-size:1.1rem
     }
     
     h3 {
@@ -32,6 +32,19 @@
     font-family:"Abel",sans-serif;
     font-size:1.2rem;
     letter-spacing:.2rem
+    }
+
+    h5{
+        font-family:"Inter",sans-serif;
+        font-size:2rem;
+        letter-spacing:3px;
+        line-height:1.4
+    }
+
+    h6{
+        font-family:"Abel",sans-serif;
+        font-size:1.2rem;
+        letter-spacing:.2rem 
     }
     
     p,.p {
